@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.2-5.008
-Date: 2024-01-10
+Version: 3.2-5.009
+Date: 2024-01-21
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
