@@ -510,6 +510,10 @@ export("spatialCDFtestCalc")
 export("spatialCovariateEvidence")
 export("spatialCovariateEvidence.exactppm")
 export("spatialCovariateEvidence.ppp")
+export("SpatialMedian")
+export("SpatialMedian.ppp")
+export("SpatialQuantile")
+export("SpatialQuantile.ppp")
 export("sphere.volume")
 export("[.ssf")
 export("ssf")
@@ -713,6 +717,8 @@ S3method("Smooth", "solist")
  S3method("Smooth", "ssf")
 S3method("spatialCovariateEvidence", "exactppm")
 S3method("spatialCovariateEvidence", "ppp")
+ S3method("SpatialMedian", "ppp")
+ S3method("SpatialQuantile", "ppp")
  S3method("[", "ssf")
 S3method("StieltjesCalc", "fv")
 S3method("StieltjesCalc", "stepfun")
