@@ -7,4 +7,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2023-05-13" "3.2-1" 234 523 0 31561 6365
 "2023-09-07" "3.2-3" 235 523 0 31638 6365
 "2023-10-22" "3.2-5" 236 524 0 31769 6365
-"2024-01-10" "3.2-5.008" 237 530 0 31854 6365
+"2024-01-21" "3.2-5.009" 240 534 0 32027 6365
